# Computational-Mathematics---Coursework

./: CMakeLists.txt  README.md  run.sh  script_crunk_nickelson.gp  script_explicit.gp  script_implicit.gp
headers/: crunk_nickelson.h  explicit.h  implicit.h  problem_statement.h  solver.h
sources/: crunk_nickelson.cpp  explicit.cpp  implicit.cpp  main.cpp  problem_statement.cpp  solver.cpp
